@@ -236,6 +236,9 @@ Release 2.0.3-alpha - Unreleased
     HADOOP-9178. src/main/conf is missing hadoop-policy.xml.
     (Sandy Ryza via eli)
 
+    HADOOP-8816. HTTP Error 413 full HEAD if using kerberos authentication. 
+    (moritzmoeller via tucu)
+
 Release 2.0.2-alpha - 2012-09-07 
 
   INCOMPATIBLE CHANGES
